Menambahkan footer dan menghapus tag komentar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <nav>
-      <!-- <div class="navbar"> -->
       <div class="logo"><a href="">Sulsel Properti</a></div>
       <ul class="navigation">
         <li><a href="#home">Beranda</a></li>
@@ -17,12 +16,9 @@
         <li><a href="#product">Produk</a></li>
         <li><a href="#contact">Kontak</a></li>
       </ul>
-      <!-- </div> -->
-      <!-- <div class="navblank"></div> -->
     </nav>
     <section id="home" class="section home odd">
       <div class="hero">
-        <!-- <img src="img/hero_img.jpg" alt=""> -->
         <div class="hero-text">
           <h1>Selamat datang di Sulsel Properti</h1>
           <h2>
@@ -31,13 +27,20 @@
         </div>
       </div>
     </section>
-    <!-- <h1>Tentang Kami</h1>
-        <div class="img-block">
-            <h3>Sulsel Properti</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor et ipsa nesciunt nulla voluptates illum rem earum inventore. Possimus modi ipsum nostrum voluptates voluptate, nobis dolorum vel sint tenetur rerum rem, ex eum adipisci? Earum perferendis ratione culpa cupiditate nesciunt corrupti distinctio repudiandae, laborum hic omnis dicta, facere qui obcaecati!</p>
-                <img src="img/1.jpg" alt="" class="img-about">
-            </div>
-        </section> -->
+    <section id="about" class="about even">
+      <h2>Tentang Kami</h2>
+      <div class="about-content">
+        <div class="about-text">
+          <h3>Cerita Kami</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, magna at blandit viverra, ipsum magna molestie erat, euismod suscipit libero risus a enim. Sed id elit non nibh malesuada aliquet. Sedeget ipsum vel nibh commodo pellentesque vel vel nisi.
+          </p>
+        </div>
+        <div class="about-image">
+          <img src="img/1.jpg" alt="About Us" />
+        </div>
+      </div>
+    </section>
     <section id="product" class="product odd">
       <h2>Produk Kami</h2>
       <h3>
@@ -121,20 +124,6 @@
       <br />
       <a href="">Lihat selengkapnya</a>
     </section>
-    <section id="about" class="about even">
-      <h2>Tentang Kami</h2>
-      <div class="about-content">
-        <div class="about-text">
-          <h3>Cerita Kami</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, magna at blandit viverra, ipsum magna molestie erat, euismod suscipit libero risus a enim. Sed id elit non nibh malesuada aliquet. Sedeget ipsum vel nibh commodo pellentesque vel vel nisi.
-          </p>
-        </div>
-        <div class="about-image">
-          <img src="img/1.jpg" alt="About Us" />
-        </div>
-      </div>
-    </section>
     <section id="contact" class="contact even">
       <h2>Hubungi Kami</h2>
       <p>
@@ -145,8 +134,15 @@
     </section>
     <footer>
       <div class="socials"></div>
-      <div class="nav-footer"></div>
-      <p>Copyrek</p>
+      <div class="nav-footer">
+        <a href="#home">Beranda</a>
+        <a href="#about">Tentang</a>
+        <a href="#product">Produk</a>
+        <a href="#contact">Kontak Kami</a>
+      </div>
+      <div class="copyright">
+        <p>Copyright by <a href="">Rumah Website</a> | &copy; 2023.</p>
+      </div>
     </footer>
   </body>
 </html>
