menambahkan # pada copyright

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <a href="#contact">Kontak Kami</a>
       </div>
       <div class="copyright">
-        <p>Copyright by <a href="">Rumah Website</a> | &copy; 2023.</p>
+        <p>Copyright by <a href="#">Rumah Website</a> | &copy; 2023.</p>
       </div>
     </footer>
   </body>
