--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="#contact">Kontak</a></li>
       </ul>
     </nav>
+    <!-- tes -->
     <section id="home" class="section home odd">
       <div class="hero">
         <div class="hero-text">
